force-app/main/default/objects/Dealer_Ally__c/Dealer_Ally__c.object-meta.xml
<CustomObject>
    <label>Dealer Ally</label>
    <nameField>
        <label>Dealer Ally Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Ally</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>