force-app/main/default/objects/Dealer_Ally__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Ally</relationshipLabel>
    <relationshipName>Dealer_Ally</relationshipName>
    <type>Lookup</type>
</CustomField>