force-app/main/default/objects/Dealer_Ally__c/fields/Account_Number_Checking__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Checking__c</fullName>
    <label>Account Number Checking</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>