force-app/main/default/objects/Dealer_Ally__c/fields/Account_Number_Checking_System__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Checking_System__c</fullName>
    <label>Account Number Checking System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>