force-app/main/default/objects/Dealer_Ally__c/fields/Account_Number_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Credit_Card__c</fullName>
    <label>Account Number Credit Card</label>
    <length>16</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>