force-app/main/default/objects/Dealer_Ally__c/fields/Account_Number_Credit_Card_System__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Credit_Card_System__c</fullName>
    <label>Account Number Credit Card System</label>
    <length>16</length>
    <type>Text</type>
</CustomField>