force-app/main/default/objects/Dealer_Ally__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Street_1__c+&apos; &apos;+City_AddressInformation__c+&apos; &apos;+TEXT(State__c )+&apos; &apos;+Zip_AddressInformation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>