force-app/main/default/objects/Dealer_Ally__c/fields/Alternate_ID__c.field-meta.xml
<CustomField>
    <fullName>Alternate_ID__c</fullName>
    <label>Alternate ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>