force-app/main/default/objects/Dealer_Ally__c/fields/Arming_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Arming_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arming Reminder</label>
    <type>Checkbox</type>
</CustomField>