force-app/main/default/objects/Dealer_Ally__c/fields/Bank_Account_Number_System__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number_System__c</fullName>
    <label>Bank Account: Number System</label>
    <length>175</length>
    <type>Text</type>
</CustomField>