force-app/main/default/objects/Dealer_Ally__c/fields/Bank_Name_System__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_System__c</fullName>
    <label>Bank Name System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>