force-app/main/default/objects/Dealer_Ally__c/fields/Biliing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Biliing_Start_Date__c</fullName>
    <label>Biliing Start Date</label>
    <type>Date</type>
</CustomField>