force-app/main/default/objects/Dealer_Ally__c/fields/Billing_Address_Same_As_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Same_As_Service_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Address Same As Service Address</label>
    <type>Checkbox</type>
</CustomField>