force-app/main/default/objects/Dealer_Ally__c/fields/Billing_Frecuency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frecuency__c</fullName>
    <label>Billing Frecuency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>