force-app/main/default/objects/Dealer_Ally__c/fields/Billing_Information_From__c.field-meta.xml
<CustomField>
    <fullName>Billing_Information_From__c</fullName>
    <label>Billing Information From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client 1</fullName>
            </value>
            <value>
                <fullName>Client 2</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>