force-app/main/default/objects/Dealer_Ally__c/fields/Card_Expiration_Month_System__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiration_Month_System__c</fullName>
    <label>Card Expiration Month System</label>
    <length>2</length>
    <type>Text</type>
</CustomField>