force-app/main/default/objects/Dealer_Ally__c/fields/Card_Expiration_Year_System__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiration_Year_System__c</fullName>
    <label>Card Expiration Year System</label>
    <length>4</length>
    <type>Text</type>
</CustomField>