force-app/main/default/objects/Dealer_Ally__c/fields/Card_Last_4_System__c.field-meta.xml
<CustomField>
    <fullName>Card_Last_4_System__c</fullName>
    <label>Card Last 4 System</label>
    <length>4</length>
    <type>Text</type>
</CustomField>