force-app/main/default/objects/Dealer_Ally__c/fields/Card_Type_System__c.field-meta.xml
<CustomField>
    <fullName>Card_Type_System__c</fullName>
    <label>Card Type System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>MC Eurocard</fullName>
            </value>
            <value>
                <fullName>UK Maestro</fullName>
            </value>
            <value>
                <fullName>JCB Card</fullName>
            </value>
            <value>
                <fullName>Diners Club</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>