force-app/main/default/objects/Dealer_Ally__c/fields/Cell_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Cell_Phone_Type__c</fullName>
    <label>Cell Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Iphone</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>