force-app/main/default/objects/Dealer_Ally__c/fields/City_AddressInformation__c.field-meta.xml
<CustomField>
    <fullName>City_AddressInformation__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>