force-app/main/default/objects/Dealer_Ally__c/fields/CS_Account_Prefix__c.field-meta.xml
<CustomField>
    <fullName>CS_Account_Prefix__c</fullName>
    <label>CS Account Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>