force-app/main/default/objects/Dealer_Ally__c/fields/CSV__c.field-meta.xml
<CustomField>
    <fullName>CSV__c</fullName>
    <label>CSV</label>
    <length>4</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>