force-app/main/default/objects/Dealer_Ally__c/fields/CSV_System__c.field-meta.xml
<CustomField>
    <fullName>CSV_System__c</fullName>
    <label>CSV System</label>
    <length>4</length>
    <type>Text</type>
</CustomField>