force-app/main/default/objects/Dealer_Ally__c/fields/Customer_1_DOB__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_DOB__c</fullName>
    <label>Customer #1 DOB</label>
    <type>Date</type>
</CustomField>