force-app/main/default/objects/Dealer_Ally__c/fields/Customer_1_Drivers_License__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_Drivers_License__c</fullName>
    <label>Customer #1 Drivers License</label>
    <length>18</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>