force-app/main/default/objects/Dealer_Ally__c/fields/Customer_1_Drivers_License_System__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_Drivers_License_System__c</fullName>
    <label>Customer #1 Drivers License System</label>
    <length>18</length>
    <type>Text</type>
</CustomField>