force-app/main/default/objects/Dealer_Ally__c/fields/Customer_1_Employer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_Employer_Phone__c</fullName>
    <label>Customer #1 Employer Phone #</label>
    <type>Phone</type>
</CustomField>