force-app/main/default/objects/Dealer_Ally__c/fields/Customer_1_Employment_Position__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_Employment_Position__c</fullName>
    <label>Customer #1 Employment Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>