force-app/main/default/objects/Dealer_Ally__c/fields/Customer_1_Length_of_Employment__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_Length_of_Employment__c</fullName>
    <label>Customer #1 Length of Employment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>