force-app/main/default/objects/Dealer_Ally__c/fields/Customer_1_SSN__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_SSN__c</fullName>
    <label>Customer #1 SSN</label>
    <length>11</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>