force-app/main/default/objects/Dealer_Ally__c/fields/Customer_1_SSN_System__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_SSN_System__c</fullName>
    <label>Customer #1 SSN System</label>
    <length>11</length>
    <type>Text</type>
</CustomField>