force-app/main/default/objects/Dealer_Ally__c/fields/Customer_2_Drivers_License_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Drivers_License_Expiration__c</fullName>
    <label>Customer #2 Drivers License Expiration</label>
    <type>Date</type>
</CustomField>