force-app/main/default/objects/Dealer_Ally__c/fields/Customer_2_Drivers_License_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Drivers_License_Issue_Date__c</fullName>
    <label>Customer #2 Drivers License Issue Date</label>
    <type>Date</type>
</CustomField>