force-app/main/default/objects/Dealer_Ally__c/fields/Customer_2_Income__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Income__c</fullName>
    <label>Customer #2 Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>