force-app/main/default/objects/Dealer_Ally__c/fields/Customer_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Company_Name__c</fullName>
    <label>Customer Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>