force-app/main/default/objects/Dealer_Ally__c/fields/Firs_Name__c.field-meta.xml
<CustomField>
    <fullName>Firs_Name__c</fullName>
    <label>Firs Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>