force-app/main/default/objects/Dealer_Ally__c/fields/Geo_Device__c.field-meta.xml
<CustomField>
    <fullName>Geo_Device__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geo Device</label>
    <type>Checkbox</type>
</CustomField>