force-app/main/default/objects/Dealer_Ally__c/fields/Homeowner_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_2_First_Name__c</fullName>
    <label>Homeowner #2 First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>