force-app/main/default/objects/Dealer_Ally__c/fields/Homeowner_2_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_2_Phone_Number__c</fullName>
    <label>Homeowner #2 Phone Number</label>
    <type>Phone</type>
</CustomField>