force-app/main/default/objects/Dealer_Ally__c/fields/Installer_Not_User__c.field-meta.xml
<CustomField>
    <fullName>Installer_Not_User__c</fullName>
    <label>Installer - Not User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>