force-app/main/default/objects/Dealer_Ally__c/fields/Join_Date_EDT__c.field-meta.xml
<CustomField>
    <fullName>Join_Date_EDT__c</fullName>
    <label>Join Date (EDT)</label>
    <type>Date</type>
</CustomField>