force-app/main/default/objects/Dealer_Ally__c/fields/Kinds_Of_Pets__c.field-meta.xml
<CustomField>
    <fullName>Kinds_Of_Pets__c</fullName>
    <label>Kinds Of Pets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Dog(s)</fullName>
            </value>
            <value>
                <fullName>Cat(s)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>