force-app/main/default/objects/Dealer_Ally__c/fields/Method_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Method_Of_Payment__c</fullName>
    <label>Method Of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>