force-app/main/default/objects/Dealer_Ally__c/fields/Mortgage_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Payment__c</fullName>
    <label>Mortgage Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>