force-app/main/default/objects/Dealer_Ally__c/fields/Name_On_Card_System__c.field-meta.xml
<CustomField>
    <fullName>Name_On_Card_System__c</fullName>
    <label>Name On Card System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>