force-app/main/default/objects/Dealer_Ally__c/fields/Network_Generation__c.field-meta.xml
<CustomField>
    <fullName>Network_Generation__c</fullName>
    <label>Network Generation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3G</fullName>
            </value>
            <value>
                <fullName>4G LTE</fullName>
            </value>
            <value>
                <fullName>2G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>