force-app/main/default/objects/Dealer_Ally__c/fields/of_Entry_Exit_Doors__c.field-meta.xml
<CustomField>
    <fullName>of_Entry_Exit_Doors__c</fullName>
    <label># of Entry/Exit Doors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>