force-app/main/default/objects/Dealer_Ally__c/fields/of_people_in_the_home__c.field-meta.xml
<CustomField>
    <fullName>of_people_in_the_home__c</fullName>
    <label># of people in the home</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>