force-app/main/default/objects/Dealer_Ally__c/fields/of_people_over_12__c.field-meta.xml
<CustomField>
    <fullName>of_people_over_12__c</fullName>
    <label># of people over 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>